<resources>
    <string name="app_name">PracticaCalificadaS4</string>
    <string name="oficina">Oficina</string>
    <string name="correo">Correo</string>
    <string name="celular">Celular</string>
    <string name="nombre">Nombre:</string>
    <string name="editar">Editar</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="n_mero_telef_nico">Número Telefónico</string>
    <string name="guardar">Guardar</string>
    <string name="miguel_medina">Miguel Medina</string>
    <string name="miguelangelmedinaventura_gmail_com">miguelangelmedinaventura@gmail.com</string>
    <string name="av_bocanegra">Av. Bocanegra</string>
    <string name="_935251378">935251378</string>
</resources>