<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_margin="12dp"
    card_view:cardBackgroundColor="#227C9D"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:src="@drawable/perfilkotlin" />

        <TextView
            android:id="@+id/textView3"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textStyle="bold"
            android:translationY="180dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="15sp"
            android:textStyle="bold"
            android:translationY="230dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oficina"
            android:textSize="15sp"
            android:textStyle="bold"
            android:translationY="280dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celular"
            android:textSize="15sp"
            android:textStyle="bold"
            android:translationY="330dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:onClick="send_edit"
            android:translationX="250dp"
            android:translationY="380dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:translationY="600dp"
            card_view:srcCompat="@android:drawable/stat_sys_phone_call" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="145dp"
            android:clickable="true"
            android:translationY="600dp"
            card_view:srcCompat="@android:drawable/ic_menu_send" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:translationX="290dp"
            android:translationY="600dp"
            card_view:srcCompat="@android:drawable/ic_dialog_email" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Miguel Medina"
            android:translationX="75dp"
            android:translationY="180dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="miguelangelmedinaventura@gmail.com"
            android:translationX="75dp"
            android:translationY="230dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Av. Bocanegra"
            android:translationX="75dp"
            android:translationY="280dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="935251378"
            android:translationX="75dp"
            android:translationY="330dp" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>